Bug 400641 - Plymouth KCM does not apply text, tribar and ubuntu-text themes correctly
Summary: Plymouth KCM does not apply text, tribar and ubuntu-text themes correctly
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_plymouth (other bugs)
Version First Reported In: 5.14.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 433104 451034 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-11-03 23:56 UTC by Patrick Silva
Modified: 2022-03-23 11:10 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2018-11-03 23:56:31 UTC
STEPS TO REPRODUCE
1. search for "boot splash" kcm in the apps launcher and open it
2. select some of these themes: text, tribar or ubuntu-text
3. click "ok" button and enter your password to apply the selected theme, reboot

OBSERVED RESULT
system shows breeze theme during boot instead the selected theme

EXPECTED RESULT
selected theme is shown during boot

SOFTWARE VERSIONS
KDE neon Developer Edition
KDE Plasma: 5.14.80
Qt: 5.11.2
KDE Frameworks: 5.52.0
kernel: 4.18.8-041808-generic
Comment 1 Nate Graham 2019-08-01 15:13:18 UTC
Is this reproducible now that the new KCM has landed? Please wait a few days, update your Neon, make sure you have the new KCM (it looks visually like other modernized ones) and then try again. Thanks!
Comment 2 Patrick Silva 2019-08-02 17:15:18 UTC
This bug is still reproducible with the new KCM on Neon unstable edition.
Comment 3 Nate Graham 2019-08-02 17:31:42 UTC
Thanks.
Comment 4 Nate Graham 2022-03-22 00:38:30 UTC
*** Bug 451034 has been marked as a duplicate of this bug. ***
Comment 5 Harald Sitter 2022-03-22 08:19:44 UTC
Warning from helper: QProcess: Destroyed while process ("/usr/sbin/update-initramfs") is still running.
Comment 6 Harald Sitter 2022-03-22 08:20:08 UTC
Not reproducible on a fresh install. One would need to slow down initramfs or install a bunch of kernel litter.
Comment 7 Bug Janitor Service 2022-03-22 08:55:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plymouth-kcm/-/merge_requests/15
Comment 8 Nate Graham 2022-03-22 15:11:26 UTC
*** Bug 433104 has been marked as a duplicate of this bug. ***
Comment 9 Harald Sitter 2022-03-23 11:10:12 UTC
Git commit 2072c97699ab7b1227ea47920d5fc1f086fa7929 by Harald Sitter.
Committed on 23/03/2022 at 11:08.
Pushed by sitter into branch 'master'.

substantially bump the helper timeout

its running time entirely depends on how fast the initrds are
to generate and how many there are. 60 seconds may not be nearly
enough.

M  +5    -2    src/helper.cpp
M  +9    -1    src/kcm.cpp

https://invent.kde.org/plasma/plymouth-kcm/commit/2072c97699ab7b1227ea47920d5fc1f086fa7929
Comment 10 Harald Sitter 2022-03-23 11:10:55 UTC
Git commit df2cc926359f986bf30ec334ee2e2aba4406fd47 by Harald Sitter.
Committed on 23/03/2022 at 11:10.
Pushed by sitter into branch 'cherry-pick-2072c976'.

substantially bump the helper timeout

its running time entirely depends on how fast the initrds are
to generate and how many there are. 60 seconds may not be nearly
enough.


(cherry picked from commit 2072c97699ab7b1227ea47920d5fc1f086fa7929)

M  +5    -2    src/helper.cpp
M  +9    -1    src/kcm.cpp

https://invent.kde.org/plasma/plymouth-kcm/commit/df2cc926359f986bf30ec334ee2e2aba4406fd47