substantially bump the helper timeout

its running time entirely depends on how fast the initrds are
to generate and how many there are. 60 seconds may not be nearly
enough.

BUG: 400641